[package]
name = "advent_of_code_2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
overflow-checks = true
codegen-units = 1
lto = "thin"
debug = true

[dependencies]
log = "0.4.20"
rayon = "1.8.0"
simple_logger = "4.3.0"
