[package]
name = "advent_of_code_2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
overflow-checks = true
codegen-units = 1
lto = "thin"
debug = true

[dependencies]
image = { version="0.24.7", features = ["png"] }
log = "0.4"
num-traits = "0.2"
simple_logger = "4.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lazy_static = "1.4"
rstest = "0.18"

[[bench]]
name = "vm_benchmark"
harness = false
